{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 221,
  "lineage": "9e476976-b1b5-29f5-960d-17d23c8f1d03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elastic_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:613679500838:instance/i-0d9289beae141953b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9289beae141953b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "rak-tp1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05622a11dc05c2712",
            "private_dns": "ip-172-20-10-128.ec2.internal",
            "private_ip": "172.20.10.128",
            "public_ip": "18.214.40.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c760ab673e8a5123",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab860cbebb5bbf95",
            "tags": {
              "Name": "elasticsearch_0"
            },
            "tags_all": {
              "Name": "elasticsearch_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03eeaaafa1278fd36"
            ]
          },
          "dependencies": [
            "aws_security_group.elasticsearch_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:613679500838:instance/i-0172a0d8566196475",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0172a0d8566196475",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "rak-tp1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03bf84910f9228fe6",
            "private_dns": "ip-172-20-20-104.ec2.internal",
            "private_ip": "172.20.20.104",
            "public_ip": "3.95.182.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0273d8333681b7433",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d9c483fc79adf5e",
            "tags": {
              "Name": "elasticsearch_1"
            },
            "tags_all": {
              "Name": "elasticsearch_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03eeaaafa1278fd36"
            ]
          },
          "dependencies": [
            "aws_security_group.elasticsearch_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:613679500838:instance/i-02c24432a21ef5b73",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c24432a21ef5b73",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "rak-tp1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03ab490488ea26fd8",
            "private_dns": "ip-172-20-30-101.ec2.internal",
            "private_ip": "172.20.30.101",
            "public_ip": "3.89.241.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00103ace90f7ad50b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0643ec3d70844ac0d",
            "tags": {
              "Name": "elasticsearch_2"
            },
            "tags_all": {
              "Name": "elasticsearch_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03eeaaafa1278fd36"
            ]
          },
          "dependencies": [
            "aws_security_group.elasticsearch_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "filebeat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:613679500838:instance/i-0629d724a74bfb154",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0629d724a74bfb154",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "rak-tp1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0073218900cbba7da",
            "private_dns": "ip-172-20-10-231.ec2.internal",
            "private_ip": "172.20.10.231",
            "public_ip": "44.198.184.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e4cd82df5bd6030",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab860cbebb5bbf95",
            "tags": {
              "Name": "filebeat"
            },
            "tags_all": {
              "Name": "filebeat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04395281f45b22d6a"
            ]
          },
          "dependencies": [
            "aws_instance.elastic_nodes",
            "aws_instance.kibana",
            "aws_instance.logstash",
            "aws_security_group.elasticsearch_sg",
            "aws_security_group.filebeat_sg",
            "aws_security_group.kibana_sg",
            "aws_security_group.logstash_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc",
            "data.template_file.init_elasticsearch",
            "null_resource.install_kibana",
            "null_resource.install_logstash",
            "null_resource.move_elasticsearch_file",
            "null_resource.start_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:613679500838:instance/i-0f3f94118d5e7d050",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3f94118d5e7d050",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "rak-tp1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07341adde25b70e4d",
            "private_dns": "ip-172-20-10-47.ec2.internal",
            "private_ip": "172.20.10.47",
            "public_ip": "3.239.193.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eaeb3045500c308c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab860cbebb5bbf95",
            "tags": {
              "Name": "kibana"
            },
            "tags_all": {
              "Name": "kibana"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9414e56b400cd8a"
            ]
          },
          "dependencies": [
            "aws_instance.elastic_nodes",
            "aws_security_group.elasticsearch_sg",
            "aws_security_group.kibana_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc",
            "data.template_file.init_elasticsearch",
            "null_resource.move_elasticsearch_file",
            "null_resource.start_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "logstash",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:613679500838:instance/i-041d04b1b16649e20",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041d04b1b16649e20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "rak-tp1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07cf510e220479895",
            "private_dns": "ip-172-20-10-107.ec2.internal",
            "private_ip": "172.20.10.107",
            "public_ip": "3.91.172.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db791b596cd90f96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab860cbebb5bbf95",
            "tags": {
              "Name": "logstash"
            },
            "tags_all": {
              "Name": "logstash"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-089d72520fc0013af"
            ]
          },
          "dependencies": [
            "aws_instance.elastic_nodes",
            "aws_instance.kibana",
            "aws_security_group.elasticsearch_sg",
            "aws_security_group.kibana_sg",
            "aws_security_group.logstash_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc",
            "data.template_file.init_elasticsearch",
            "null_resource.install_kibana",
            "null_resource.move_elasticsearch_file",
            "null_resource.start_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "elastic_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613679500838:internet-gateway/igw-0f9bd3e32157f0341",
            "id": "igw-0f9bd3e32157f0341",
            "owner_id": "613679500838",
            "tags": {
              "Name": "elastic_igw"
            },
            "tags_all": {
              "Name": "elastic_igw"
            },
            "vpc_id": "vpc-03d17e41cbaf4b118"
          },
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "elastic_rt_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cef2bcaf197c387",
            "original_route_table_id": "rtb-014ebee6152ec13f1",
            "route_table_id": "rtb-036cbd43f39511846",
            "vpc_id": "vpc-03d17e41cbaf4b118"
          },
          "dependencies": [
            "aws_internet_gateway.elastic_internet_gateway",
            "aws_route_table.elastic_rt",
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elastic_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613679500838:route-table/rtb-036cbd43f39511846",
            "id": "rtb-036cbd43f39511846",
            "owner_id": "613679500838",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9bd3e32157f0341",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elastic_rt"
            },
            "tags_all": {
              "Name": "elastic_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d17e41cbaf4b118"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.elastic_internet_gateway",
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticsearch_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613679500838:security-group/sg-03eeaaafa1278fd36",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03eeaaafa1278fd36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              }
            ],
            "name": "terraform-20211120035020486300000001",
            "name_prefix": "terraform-",
            "owner_id": "613679500838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elasticsearch_sg"
            },
            "tags_all": {
              "Name": "elasticsearch_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d17e41cbaf4b118"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "filebeat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613679500838:security-group/sg-04395281f45b22d6a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04395281f45b22d6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20211120035020492300000004",
            "name_prefix": "terraform-",
            "owner_id": "613679500838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "filebeat_sg"
            },
            "tags_all": {
              "Name": "filebeat_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d17e41cbaf4b118"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kibana_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613679500838:security-group/sg-0d9414e56b400cd8a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9414e56b400cd8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              }
            ],
            "name": "terraform-20211120035020492300000003",
            "name_prefix": "terraform-",
            "owner_id": "613679500838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kibana_sg"
            },
            "tags_all": {
              "Name": "kibana_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d17e41cbaf4b118"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "logstash_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613679500838:security-group/sg-089d72520fc0013af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089d72520fc0013af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 5044,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5044
              }
            ],
            "name": "terraform-20211120035020487300000002",
            "name_prefix": "terraform-",
            "owner_id": "613679500838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "logstash_sg"
            },
            "tags_all": {
              "Name": "logstash_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d17e41cbaf4b118"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elastic_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613679500838:subnet/subnet-0ab860cbebb5bbf95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-0ab860cbebb5bbf95",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613679500838",
            "tags": {
              "Name": "elastic_subnet_us-east-1a"
            },
            "tags_all": {
              "Name": "elastic_subnet_us-east-1a"
            },
            "vpc_id": "vpc-03d17e41cbaf4b118"
          },
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613679500838:subnet/subnet-05d9c483fc79adf5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.20.0/24",
            "id": "subnet-05d9c483fc79adf5e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613679500838",
            "tags": {
              "Name": "elastic_subnet_us-east-1b"
            },
            "tags_all": {
              "Name": "elastic_subnet_us-east-1b"
            },
            "vpc_id": "vpc-03d17e41cbaf4b118"
          },
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613679500838:subnet/subnet-0643ec3d70844ac0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.30.0/24",
            "id": "subnet-0643ec3d70844ac0d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613679500838",
            "tags": {
              "Name": "elastic_subnet_us-east-1c"
            },
            "tags_all": {
              "Name": "elastic_subnet_us-east-1c"
            },
            "vpc_id": "vpc-03d17e41cbaf4b118"
          },
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "elastic_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613679500838:vpc/vpc-03d17e41cbaf4b118",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-04d198ba4e2c0d587",
            "default_route_table_id": "rtb-014ebee6152ec13f1",
            "default_security_group_id": "sg-00a2d6e7bb721adff",
            "dhcp_options_id": "dopt-0a5d3ded8df95a9ae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03d17e41cbaf4b118",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-014ebee6152ec13f1",
            "owner_id": "613679500838",
            "tags": {
              "Name": "elastic_vpc"
            },
            "tags_all": {
              "Name": "elastic_vpc"
            }
          }
        }
      ]
    }
  ]
}